test/descriptor/seman/corr13.v3
//@seman = DescriptorError @ 8:19
class DA describes A { }
class DB extends DA describes B { }
class DC extends DA describes C { }
class A descriptor DA { }
class B extends A descriptor DB { }
class C extends A descriptor DC { }
class D extends A { }  // error: D must declare a descriptor since A has one
